# iEngine

./: .gitignore  CMakeLists.txt
Bulid/: CMakeCache.txt  Makefile
Bulid/Framework/: Makefile
Bulid/Framework/Common/: Makefile
Bulid/Platform/: Makefile
Bulid/Platform/Empty/: Empty  Makefile
Framework/Common/: BaseApplication.cpp  BaseApplication.hpp  GraphicsManager.hpp  main.cpp
Framework/Interface/: IApplication.hpp  IRuntimeModule.hpp  Interface.hpp
Platform/: CMakeLists.txt
Platform/Empty/: EmptyApplication.cpp
