cmake_minimum_required (VERSION 3.1)
set (CMAKE_C_STANDARD 14)
set (CMAKE_CXX_STANDARD 14)
project (ToyGameEngine)
include_directories("${PROJECT_SOURCE_DIR}/Framework/Common")
include_directories("${PROJECT_SOURCE_DIR}/Framework/Interface")
include_directories("${PROJECT_SOURCE_DIR}/Platform/Empty")
add_subdirectory(Framework)
add_subdirectory(Platform)